--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalleEjemplarDisponibilidad.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalleEjemplarDisponibilidad.tmpl
@@ -30,7 +30,7 @@
               <tfoot>
                    <div class="page-header" style="border-bottom: none; padding-bottom: 0px;">
                         <h3>
-                            <small>[% "Este ejemplar a tenido " | i18n %] [% cant_historico %][% " cambios en su disponibilidad " | i18n %]</small>
+                            <small>[% "Este ejemplar a tenido" | i18n %]&nbsp;[% cant_historico %]&nbsp;[% "cambios en su disponibilidad " | i18n %]</small>
                         </h3>
                     </div>
               </tfoot>
