--- a/intranet/htdocs/intranet-tmpl/estantes/contenidoEstante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/contenidoEstante.tmpl
@@ -62,10 +62,9 @@ function borrarCont(cont, estante, padre){
                                         id              => "tablaResultCont",
                                         class           => "table table-bordered",
                                         selectAll_id    => "",
-                                        columns         => ['[% "T&iacute;tulo" | i18n %]','[% 'Autor' | i18n %]',
-                                                            '[% "Edicion" | i18n %]',
+                                        columns         => ["[% 'T&iacute;tulo' | i18n %]","[% 'Autor' | i18n %]","[% 'Edici&oacute;n' | i18n %]",
                                                             ],
-                                        sortable_fields          => {'T&iacute;tulo' => 'titulo', 
+                                        sortable_fields => {'T&iacute;tulo' => 'titulo', 
                                                              'Autor' => 'autor',
                                                              'Edici&oacute;n' => '',
                                                           },
