--- a/intranet/cgi-bin/install/templates/index.tmpl
+++ b/intranet/cgi-bin/install/templates/index.tmpl
@@ -1,5 +1,7 @@
 [% INCLUDE 'installer-top.inc' %]
 
+[% session_id %]
+
       <h1>Bienvenido a la instalaci&oacute;n de Meran</h1>
       <p>Deber&aacute; completar algunos datos para comenzar a utilizar su sistema de gesti&oacute;n.</p>
 
