--- a/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones_reglas.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones_reglas.tmpl
@@ -41,7 +41,7 @@
                           selectAll_id    => "",
                           columns         => ['[% "Orden" | i18n %]',
                                               '[% 'D&iacute;as de demora' | i18n %]',
-                                              '[% "D&iacute;as de demora" | i18n %]','[% "Cantidad" | i18n %]',
+                                              '[% "D&iacute;as de sanci&oacute;n" | i18n %]','[% "Cantidad" | i18n %]',
                                               '[% "Acciones" | i18n %]',
                                               ],
                                                           
