--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/detalle.tmpl
@@ -356,7 +356,7 @@
                                      <img src="/includes/css/gbs_preview_button1.gif" border="0" style="margin: 0"/>
                                  </a>
                              </div>
-                             <script src="https://books.google.com/books?jscmd=viewapi&bibkeys=ISBN:[% isbn %]&callback=ProcessGBSBookInfo"></script>
+                           <script src="http://books.google.com/books?jscmd=viewapi&bibkeys=ISBN:[% isbn %]&callback=ProcessGBSBookInfo"></script> 
                          [% END %]
 
 		                [% PERL %]
