--- a/intranet/htdocs/intranet-tmpl/admin/usuarios/regularidades.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/usuarios/regularidades.tmpl
@@ -30,7 +30,7 @@
                 <td>[% R.estado.getNombre %]</td>
                 <td>[% R.estado.getFuente %]</td>
 	            <td>[% R.categoria.getDescription %]</td>
-	            <td id="regularidad_[% R.id %]">[% R.getRegularidad %]</td>
+	            <td id="regularidad_[% R.id %]" class="click">[% R.getRegularidad %]</td>
                 <script>
                     $('#regularidad_[% R.id %]').editable('[% url_prefix %]/admin/usuarios/regularidadesDB.pl', { 
                         data   : " {'[% 'No' | i18n %]':'[% 'No' | i18n %]','[% 'Si' | i18n %]':'[% 'Si' | i18n %]','selected':'[% 'R.getRegularidad' %]'}",
