unificacion de headers (HTML y CSS) en todos los index

--- a/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/circulacion/sanciones.tmpl
@@ -230,7 +230,9 @@ $(document).ready( function() {
 
 </script>
 
-
+<div class="page-header">
+    <h1> [% "Sanciones" | i18n %]<small> [% "Reglas, esquemas, etc." | i18n %]</small></h1>
+  </div>
 <form class="well form-search">
       [% tipos_de_prestamos %]
       [% categorias_de_socio %]
