--- a/intranet/htdocs/intranet-tmpl/admin/logos_ajax.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/logos_ajax.tmpl
@@ -7,7 +7,7 @@
 </script>
 
 <fieldset>
-    <legend>[% "Listado de Logos de etiquetas" | i18n %]:</legend>
+    <legend>[% "Listado de logos de etiquetas" | i18n %]:</legend>
         [% IF logos %]
             <div class="datos_tabla_div_user">
                 
