--- a/intranet/htdocs/intranet-tmpl/admin/permisos/permisos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/permisos/permisos.tmpl
@@ -43,7 +43,10 @@
 	}
 </script>
 
-<h3>[% "Administraci&oacute;n de permisos" | i18n %]</h3>
+
+<div class="page-header">
+    <h2>[% "Administraci&oacute;n de permisos" | i18n %] <small></small></h2>
+</div>
 
 [% INCLUDE "partials/admin/_permisos.inc" %]
 
