--- a/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
+++ b/intranet/htdocs/intranet-tmpl/estantes/estante.tmpl
@@ -2,6 +2,11 @@
 <script type="text/javascript" src="/intranet-tmpl/includes/estantesVirtuales.js">
 </script>
 
+
+<div class="page-header">
+    <h1>[% 'Estantes virtuales' | i18n %] <small>[% 'Edici&oacute;n, detalle, etc.' | i18n %]</small></h1>
+</div>    
+
 <div id="nuevo_estante" class="modal hide fade">
       <div class="modal-header">
             <h3>[% "Nuevo Estante" | i18n %]</h3>
