--- a/intranet/htdocs/intranet-tmpl/admin/logos_ajax_ui.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/logos_ajax_ui.tmpl
@@ -7,7 +7,7 @@
 </script>
 
 <fieldset>
-    <legend>[% "Listado de Logos de la UI" | i18n %]:</legend>
+    <legend>[% "Listado de logos de la UI" | i18n %]:</legend>
 
             <div class="datos_tabla_div_user">
                 
