--- a/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuario.tmpl
+++ b/intranet/htdocs/intranet-tmpl/usuarios/potenciales/buscarUsuario.tmpl
@@ -129,10 +129,8 @@ $(document).ready(function() {
 
 </script>
 
-<div class="title">[% "B&uacute;squeda de Usuarios Potenciales" | i18n %]</div>
-<!--<div class="titulos">[% "B&uacute;squeda de Usuarios Potenciales" | i18n %]</div>-->
 <fieldset>
-    <!--<legend class="titulo_legend">[% "B&uacute;squeda de Usuarios Potenciales" | i18n %]</legend>-->
+    <legend>[% "B&uacute;squeda de Usuarios Potenciales" | i18n %]</legend>
       <section class="">
 
               [% PERL %]
