fix novedades opac

--- a/intranet/htdocs/intranet-tmpl/admin/agregar_novedad.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/agregar_novedad.tmpl
@@ -58,23 +58,23 @@
 [% END %]
 
                 <div class="control-group">
-                    <label class="control-label" for="titulo">[% "Titulo" | i18n %]</label>
+                    <label class="control-label" for="titulo">[% "Titulo" | i18n %]*</label>
                     <div class="controls">
-                        <input type="text" id="titulo" required name="titulo" value="[% novedad.getTitulo %] [% titulo %]">
+                        <input type="text" id="titulo" required name="titulo" value="[% novedad.getTitulo %][% titulo %]">
                     </div>
                 </div>
                 
                 <div class="control-group">
-                    <label class="control-label" for="categoria">[% "Categor&iacute;a" | i18n %]</label>
+                    <label class="control-label" for="categoria">[% "Categor&iacute;a" | i18n %]*</label>
                     <div class="controls">
-                        <input type="text" id="categoria" required name="categoria" value="[% novedad.getCategoria %] [% categoria %]">
+                        <input type="text" id="categoria" required name="categoria" value="[% novedad.getCategoria %][% categoria %]">
                     </div>
                 </div>
                 
                 <div class="control-group">
-                    <label class="control-label" for="contenido">[% "Contenido" | i18n %]</label>
+                    <label class="control-label" for="contenido">[% "Contenido" | i18n %]*</label>
                     <div class="controls">
-                        <textarea id="contenido" required name="contenido" style="width: 88.3%" >[% novedad.getContenido %]</textarea>
+                        <textarea id="contenido" required name="contenido" style="width: 88.3%" >[% novedad.getContenido %][% contenido %]</textarea>
                     </div>
                 </div>
 
@@ -91,6 +91,11 @@
                 <div class="control-group">
                     <label class="control-label" for="contenido">[% "Archivo adjunto" | i18n %]</label>
                     <div class="controls">
+                        [% IF editing %]
+                            [% IF novedad.getAdjunto %]
+                                <a href="http://[% SERVER_ADDRESS %]/opac-tmpl/uploads/novedades/[% novedad.getAdjunto %]">[% 'Click para ver adjunto' | i18n %]</a><br />
+                            [% END %]
+                        [% END %]
                         <input type="file" name="adjunto" />
                     </div>
                 </div>
