mail template color bootstrap

--- a/opac/htdocs/opac-tmpl/includes/opac-mail.tmpl
+++ b/opac/htdocs/opac-tmpl/includes/opac-mail.tmpl
@@ -15,7 +15,7 @@
                                         <table width="100%" border="0" cellpadding="0" cellspacing="0">
                                             <tr>
                                                 <td>
-                                                    <table width="100%" border="0" cellpadding="0" cellspacing="0" style="background-color: #6E6E6E;">
+                                                    <table width="100%" border="0" cellpadding="0" cellspacing="0" style="background-color: #333333;">
                                                         <tr>
                                                             <td width="340" style="padding: 12px 20px; font-family: Tahoma, Verdana, Arial, Helvetica, sans-serif;"><a href="[% server_name %]" style="color:#fff; text-decoration:none; font-size:26px;"><strong>MERAN</strong></a></td>
                                                             <td align="right" valign="middle" style="padding: 12px 20px; font-family: 'Trebuchet MS', Verdana, Arial, Helvetica, sans-serif;"><span style="font-size:14px;color:#e2ebd8;">[% nombre_ui %]</span></td>
