--- a/intranet/htdocs/intranet-tmpl/catalogacion/estructura/estructuraCatalo.tmpl
+++ b/intranet/htdocs/intranet-tmpl/catalogacion/estructura/estructuraCatalo.tmpl
@@ -511,39 +511,37 @@ function updateModificarEstructuraCatalogacion(responseText){
     print C4::AR::Filtros::ayuda_marc() ;
 [% END %]
 
-<div class="title">Configuraci&oacute;n del formulario de carga</div>
+<fieldset>
+    <legend>Configuraci&oacute;n del formulario de carga</legend>
 
-<section class="center-section-form">
-	<form class="form-horizontal">
-	    <fieldset>
-		    <legend>[% "Seleccione el nivel:" | i18n %]</legend>
-		    <div class="control-group">
-		        <label class="control-label" for="tipo_nivel3_id"> [% "Esquema" | i18n %]: </label>
-		        <div class="controls">
-		            [% selectItemType %]
-		        </div>
-		    </div>
+    <section class="center-section-form">
+    	<form class="form-horizontal">
+    		    <div class="control-group">
+    		        <label class="control-label" for="tipo_nivel3_id"> [% "Esquema" | i18n %]: </label>
+    		        <div class="controls">
+    		            [% selectItemType %]
+    		        </div>
+    		    </div>
 
-            <div class="control-group">
-                <label class="control-label" for="niveles_id"> [% "Nivel" | i18n %]: </label>
-                <div class="controls">
-                    [% selectNivel %]
+                <div class="control-group">
+                    <label class="control-label" for="niveles_id"> [% "Nivel" | i18n %]: </label>
+                    <div class="controls">
+                        [% selectNivel %]
+                    </div>
                 </div>
-            </div>
-            
-            <div class="form-actions">
-                    [% PERL %]
-                            print C4::AR::Filtros::action_button(   
-                                                                button   => "btn btn-primary",
-                                                                action  => "eleccionDeNivel();",
-                                                                title   => "[% 'Buscar' | i18n %]",
-                                    ) ;
-                    [% END %]
-            </div>
-
-	    </fieldset>
-	</form>
-</section>
+                
+                <div class="form-actions">
+                        [% PERL %]
+                                print C4::AR::Filtros::action_button(   
+                                                                    button   => "btn btn-primary",
+                                                                    action  => "eleccionDeNivel();",
+                                                                    title   => "[% 'Buscar' | i18n %]",
+                                        ) ;
+                        [% END %]
+                </div>
+    	</form>
+    </section>
+</fieldset>
 
 <!-- PARA MOSTRAR TEMPLATE PARA MODIFICAR CAMPOS -->
 <div id="resultModificarCampo" class="modal hide fade"></div>
