--- a/intranet/htdocs/intranet-tmpl/admin/novedades_opac.tmpl
+++ b/intranet/htdocs/intranet-tmpl/admin/novedades_opac.tmpl
@@ -25,6 +25,7 @@
         objAH.debug         = true;
         objAH.showOverlay   = true;
         objAH.url           = URL_PREFIX+'/admin/novedades_opacDB.pl';
+        objAH.funcion       = 'changePage';
         objAH.tipoAccion    = 'LISTAR';
         objAH.sendToServer();
     }
