--- a/intranet/htdocs/intranet-tmpl/reports/circulacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/circulacion.tmpl
@@ -1,26 +1,29 @@
 [% INCLUDE 'intranet-top.inc' %] 
 [% USE HTML %]
 
+
 [% PERL %]
-    print C4::AR::Filtros::tabbedPane( titulo   => "[% 'Reportes de Circulaci&oacute;n' | i18n %]",
-                             subtitulo          => "[% 'Navegue por las pesta&ntilde;as para acceder a los distintos reportes' | i18n %]",
-                             content            => [  {id => 'general', text => "[% 'General' | i18n %]" },
-                                                      {id => 'reservas', text=> "[% 'Reservas' | i18n %]" },
-                                                     
-                                                  ] ,
-                             active_id => 'general',
+    print C4::AR::Filtros::tabbedPane( titulo    => "[% 'Reportes de Circulaci&oacute;n' | i18n %]",
+                                 subtitulo => "[% 'Navegue por las pesta&ntilde;as para acceder a los distintos reportes' | i18n %]",
+                                 content   => [ 
+                                                {id => 'rep_general', text => "[% 'General' | i18n %]"},
+                                                {id => 'reservas', text => "[% 'Reservas' | i18n %]"},
+                                              ],
+                                 content_id=> 'reportes_circulacion',
+                                 active_id => 'rep_general',
     
     );
 
 [% END %]
-        <div class="tab-pane fade in active" id="general">
+
+
+        <div class="tab-pane fade in active" id="rep_general">
             [% INCLUDE 'partials/reportes/_reporte_circulacion_general.inc' %]
         </div>
         <div class="tab-pane fade" id="reservas">
-            [% INCLUDE 'partials/reportes/_reporte_circulacion.inc' %]
+            [% INCLUDE 'partials/reportes/_reporte_circulacion_general.inc' %]
         </div>
-    
-      </div>
+  </div>
 </section>
 
 <div id="reportResultCirc" style="display:none;"></div>
