--- a/intranet/htdocs/intranet-tmpl/reports/circulacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/reports/circulacion.tmpl
@@ -1,6 +1,14 @@
 [% INCLUDE 'intranet-top.inc' %] 
 [% USE HTML %]
 
+<script>
+
+    $(document).ready(function(){
+          
+    });
+
+</script>
+
 [% PERL %]
     print C4::AR::Filtros::tabbedPane( titulo   => "[% 'Reportes de Circulaci&oacute;n' | i18n %]",
                              subtitulo          => "[% 'Navegue por las pesta&ntilde;as para acceder a los distintos reportes' | i18n %]",
@@ -8,6 +16,7 @@
                                                       {id => 'reservas', text=> "[% 'Reservas' | i18n %]" },
                                                      
                                                   ] ,
+                             content_id=> 'reportes_catalogo',
                              active_id => 'general',
     
     );
@@ -16,7 +25,7 @@
         <div class="tab-pane fade in active" id="general">
             [% INCLUDE 'partials/reportes/_reporte_circulacion_general.inc' %]
         </div>
-        <div class="tab-pane fade" id="reservas">
+        <div class="tab-pane fade " id="reservas">
             [% INCLUDE 'partials/reportes/_reporte_circulacion.inc' %]
         </div>
     
